# MCP-server-data-exploration

./: .gitignore  CODE_ARCHITECTURE.md  MCP.md  README.md  pyproject.toml  setup.py
data-analysis-chatbot/: .gitignore  QUICKSTART.md  VISUALIZATION_GUIDE.md  index.html  script.js  setup.bat  setup.sh  styles.css
data-analysis-chatbot/backend/: .env.example  mcpClient.js  package.json  server.js  test-setup.js
