[project]
name = "mcp-server-ds"
version = "0.1.6"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "mcp>=1.0.0",
 "numpy>=2.1.3",
 "pandas>=2.2.3",
 "scikit-learn>=1.5.2",
 "scipy>=1.14.1",
 "statsmodels>=0.14.4",
]
[[project.authors]]
name = "Xing Xing"
email = "xingxingumich@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-ds = "mcp_server_ds:main"
